chore: Update page titles and descriptions for consistency

--- a/src/content/pages/badge.mdx
+++ b/src/content/pages/badge.mdx
@@ -3,20 +3,17 @@ name: Badges
 title: Badges
 description: Variantes de badges.
 slug: badge
-badge:
-  - HTML
-  - Astro
-  - TailwindCSS
 author: Alexissxde
 ---
 
 import CodeBlock from "@/components/code-block.astro"
 import ComponentPreview from "@/components/component-preview.astro"
 import Badges from "@/components/examples/badges.astro"
+import BadgesAnimated from "@/components/examples/badge-animated.astro"
 import BadgesSizes from "@/components/examples/badges-sizes.astro"
 import Tabs from "@/components/tabs.astro"
 
-# Badges
+# {frontmatter.title}
 
 <Tabs client:visible>
 	<ComponentPreview slot="preview">
