--- a/src/content/pages/button.mdx
+++ b/src/content/pages/button.mdx
@@ -3,10 +3,6 @@ name: Buttons
 title: Buttons
 description: Variantes de botones.
 slug: button
-badge:
-  - HTML
-  - Astro
-  - TailwindCSS
 author: Alexissxde
 ---
 
@@ -16,7 +12,7 @@ import Buttons from "@/components/examples/buttons.astro"
 import ButtonsSizes from "@/components/examples/buttons-sizes.astro"
 import Tabs from "@/components/tabs.astro"
 
-# Buttons
+# {frontmatter.title}
 
 <Tabs client:visible>
 	<ComponentPreview slot="preview">
