--- a/src/content/pages/input.mdx
+++ b/src/content/pages/input.mdx
@@ -1,12 +1,8 @@
 ---
-name: Inputs
-title: Inputs
-description: Variantes de inputs.
+name: Input
+title: Input
+description: Input.
 slug: input
-badge:
-  - HTML
-  - Astro
-  - TailwindCSS
 author: Alexissxde
 ---
 
@@ -15,7 +11,7 @@ import ComponentPreview from "@/components/component-preview.astro"
 import Form from "@/components/examples/form.astro"
 import Tabs from "@/components/tabs.astro"
 
-# Input
+# {frontmatter.title}
 
 <Tabs client:visible>
 	<ComponentPreview slot="preview">
