--- a/src/content/pages/installation.mdx
+++ b/src/content/pages/installation.mdx
@@ -1,15 +1,15 @@
 ---
 name: installation
-title: Installation - WertyUI
-description: How to install WertyUI in your project.
+title: Installation - Astro UI Kit
+description: How to install Astro UI Kit in your project.
 slug: installation
 ---
 
 import CodeBlock from "@/components/code-block.astro"
 
-# Installation
+# Instalación
 
-## Install Tailwind CSS
+## Instalar Tailwind CSS
 
 Components are styled using Tailwind CSS. Follow the [official installation guide](https://tailwindcss.com/docs/installation) to add it to your project.
 
@@ -30,7 +30,6 @@ Crear un archivo en `src/lib/dom-selector.ts`:
 Si no usa TypeScript solamente cree un archivo `dom-selector.js` y elimine el tipado.
 
 <CodeBlock filePath="src/lib/dom-selector.ts" lang="ts" />
-
 
 ## Configurar Alias en el tsconfig.json
 
