feat: Actualizar enlaces de documentación a la nueva estructura de componentes

--- a/src/content/pages/badge.mdx
+++ b/src/content/pages/badge.mdx
@@ -49,7 +49,7 @@ Luego copie el siguiente codigo, cree un archivo en `src/components/ui/button.as
 	lang="astro"
 />
 
-Para usar los alias "@/" configure su archivo `ts.config.json` <a href="/docs/installation#configurar-alias-en-el-tsconfigjson">Mirar como configurar aquí</a>
+Para usar los alias "@/" configure su archivo `ts.config.json` <a href="/components/installation#configurar-alias-en-el-tsconfigjson">Mirar como configurar aquí</a>
 
 ## Component API
 
