--- a/src/content/pages/sheet.mdx
+++ b/src/content/pages/sheet.mdx
@@ -39,7 +39,7 @@ Copie el siguiente codigo, cree un archivo en `src/components/ui/sheet.astro` y 
 	lang="astro"
 />
 
-Para usar los alias "@/" configure su archivo `ts.config.json` <a href="/docs/installation#configurar-alias-en-el-tsconfigjson">Mirar como configurar aquí</a>
+Para usar los alias "@/" configure su archivo `ts.config.json` <a href="/components/installation#configurar-alias-en-el-tsconfigjson">Mirar como configurar aquí</a>
 
 ## Component API
 
