--- a/src/content/pages/disclosure.mdx
+++ b/src/content/pages/disclosure.mdx
@@ -13,7 +13,6 @@ import Tabs from "@/components/tabs.astro"
 
 # {frontmatter.title}
 
-
 <Tabs client:visible>
 	<ComponentPreview slot="preview">
 		<Disclosure />
@@ -24,3 +23,30 @@ import Tabs from "@/components/tabs.astro"
 		lang="astro"
 	/>
 </Tabs>
+
+## Instalación
+
+Copie el siguiente codigo, cree un archivo en `src/components/ui/disclosure.astro` y peguelo ahí.
+
+<CodeBlock filePath="src/components/ui/disclosure.astro" />
+
+## Importación
+
+<CodeBlock
+	code={`---
+  import Disclosure from "@/components/ui/disclosure.astro"
+---`}
+	lang="astro"
+/>
+
+Para usar los alias "@/" configure su archivo `ts.config.json` <a href="/components/installation#configurar-alias-en-el-tsconfigjson">Mirar como configurar aquí</a>
+
+## Component API
+
+### Disclosure
+
+| Prop  | Type   | Description               |
+| :---- | :----- | :------------------------ |
+| title  | string | El título del disclosure.        |
+| slot  | string | El contenido del disclosure.      |
+| class | string | Clases opcionales de CSS.   |
