feat: Cambiar la carga de componentes a 'client:load' para mejorar el rendimiento

--- a/src/content/pages/badge.mdx
+++ b/src/content/pages/badge.mdx
@@ -15,7 +15,7 @@ import Tabs from "@/components/tabs.astro"
 
 # {frontmatter.title}
 
-<Tabs client:visible>
+<Tabs client:load>
 	<ComponentPreview slot="preview">
 		<Badges />
 	</ComponentPreview>
