--- a/src/content/pages/button.mdx
+++ b/src/content/pages/button.mdx
@@ -14,7 +14,7 @@ import Tabs from "@/components/tabs.astro"
 
 # {frontmatter.title}
 
-<Tabs client:visible>
+<Tabs client:load>
 	<ComponentPreview slot="preview">
 		<Buttons />
 	</ComponentPreview>
