--- a/src/content/pages/input.mdx
+++ b/src/content/pages/input.mdx
@@ -13,7 +13,7 @@ import Tabs from "@/components/tabs.astro"
 
 # {frontmatter.title}
 
-<Tabs client:visible>
+<Tabs client:load>
 	<ComponentPreview slot="preview">
 		<Form />
 	</ComponentPreview>
