--- a/src/content/pages/sheet.mdx
+++ b/src/content/pages/sheet.mdx
@@ -13,7 +13,7 @@ import Tabs from "@/components/tabs.astro"
 
 # Sheet
 
-<Tabs client:visible>
+<Tabs client:load>
 	<ComponentPreview slot="preview">
 		<Sheet />
 	</ComponentPreview>
